# Wasl

./: .gitignore  LICENSE  README.md  Wasl Blueprint.md  docker-compose.yml
postgres/: Dockerfile  bkpDockerfile
scripts/: db_seed.py  run_dev.sh
test_docker/: Dockerfile
wasl-server/: Dockerfile  pyproject.toml
wasl-server/app/: main.py
wasl-sync/: Cargo.toml  Dockerfile
wasl-sync/.cargo/: config.toml
wasl-sync/src/: main.rs
