[tool.poetry]
name = "wasl-server"
version = "0.1.0"
description = "The main application and API server for Wasl."
authors = ["The Wasl Core Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
psycopg2-binary = "^2.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
