[package]
name = "wasl-sync"
version = "0.1.0"
edition = "2021"
description = "The real-time sync server for Wasl collaboration."

# This section tells Cargo where to find the main binary file.
[[bin]]
name = "wasl-sync"
path = "src/main.rs"

# This prevents this sub-project from inheriting a workspace from a parent directory,
# making it a self-contained Cargo project.
[workspace]

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
yrs = "0.16"
tracing = "0.1"
tracing-subscriber = "0.3"
